--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" href="<%= THEME %>favicon.ico">
-    <link rel="stylesheet" href="/iconfont/iconfont.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="icon" href="<%= THEME %>favicon.ico">
+  <link rel="stylesheet" href="/iconfont/iconfont.css">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  <style>
+    #app { display: none; }
+    #iframeWrapper {
+      display: none;
+    }
+
+    iframe {
+      width: 375px;
+      height: 100vh;
+      margin: 0 auto;
+      /* // border-radius: 16px; 圆角边框 */
+      border: 1px solid #e0e0e0;
+      /* 淡灰色边框 */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1),
+        /* 底部柔和阴影 */
+        0 0 15px rgba(0, 0, 0, 0.05);
+      /* 四周轻微发光 */
+      background-color: #fff;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <div id="iframeWrapper">
+    <iframe src="http://localhost:5100" width="375" height="800" frameborder="0" id="previewFrame"></iframe>
+  </div>
+  <!-- built files will be auto injected -->
+</body>
+<script>
+  function init() {
+    const width = window.innerWidth || document.documentElement.clientWidth;
+    const device = width <= 650 ? 'mobile' : 'desktop';
+
+    if (device === 'mobile') {
+      // 移动端显示 Vue 挂载点
+      document.getElementById('app').style.display = 'block';
+      document.getElementById('iframeWrapper').style.display = 'none';
+    } else {
+      // PC 端显示 iframe，src 指向本地入口
+      document.getElementById('app').style.display = 'none';
+      const iframeWrapper = document.getElementById('iframeWrapper');
+      const iframe = document.getElementById('previewFrame');
+      iframeWrapper.style.display = 'flex';
+      // 根据环境设置实际地址
+    if (location.hostname === 'localhost') {
+      iframe.src = 'http://localhost:5100'; // 开发环境地址
+    } else {
+      iframe.src = '/index.html'; // 生产环境入口
+    }
+    }
+  }
+
+  // 初始化
+  init();
+
+  // 监听窗口变化
+  window.addEventListener('resize', init);
+</script>
+
 </html>
