--- a/public/index.html
+++ b/public/index.html
@@ -8,71 +8,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="<%= THEME %>favicon.ico">
   <link rel="stylesheet" href="/iconfont/iconfont.css">
+  <link rel="stylesheet" href="/iconfont1/iconfont.css">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <style>
-    #app { display: none; }
-    #iframeWrapper {
+    #app {
       display: none;
     }
 
-    iframe {
+    .no-vw.iframe-module {
       width: 375px;
-      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: none;
       margin: 0 auto;
-      /* // border-radius: 16px; 圆角边框 */
-      border: 1px solid #e0e0e0;
-      /* 淡灰色边框 */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1),
-        /* 底部柔和阴影 */
-        0 0 15px rgba(0, 0, 0, 0.05);
-      /* 四周轻微发光 */
-      background-color: #fff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 15px rgba(0, 0, 0, 0.05);
+    }
+
+    .iframe-module #iframe-pc-module {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 
-<body>
+<body onload="init()">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <div id="iframeWrapper">
-    <iframe src="http://localhost:5100" width="375" height="800" frameborder="0" id="previewFrame"></iframe>
+  <div id="iframe-module" class="iframe-module no-vw">
+    <iframe id="iframe-pc-module" frameborder="0"></iframe>
   </div>
   <!-- built files will be auto injected -->
+
+  <script>
+    function init() {
+      const width = window.innerWidth || document.documentElement.clientWidth;
+      if (width > 750) {
+        document.getElementById('app').style.display = 'none'
+        document.getElementById('iframe-module').style.display = 'block'
+        document.getElementById('iframe-pc-module').src = window.origin
+        var node = document.getElementById('app')
+        node.parentNode.removeChild(node)
+      } else {
+        document.getElementById('app').style.display = 'block'
+        document.getElementById('iframe-module').style.display = 'none'
+        var node = document.getElementById('iframe-module')
+        node.parentNode.removeChild(node)
+      }
+    }
+
+  </script>
 </body>
-<script>
-  function init() {
-    const width = window.innerWidth || document.documentElement.clientWidth;
-    const device = width <= 650 ? 'mobile' : 'desktop';
 
-    if (device === 'mobile') {
-      // 移动端显示 Vue 挂载点
-      document.getElementById('app').style.display = 'block';
-      document.getElementById('iframeWrapper').style.display = 'none';
-    } else {
-      // PC 端显示 iframe，src 指向本地入口
-      document.getElementById('app').style.display = 'none';
-      const iframeWrapper = document.getElementById('iframeWrapper');
-      const iframe = document.getElementById('previewFrame');
-      iframeWrapper.style.display = 'flex';
-      // 根据环境设置实际地址
-    if (location.hostname === 'localhost') {
-      iframe.src = 'http://localhost:5100'; // 开发环境地址
-    } else {
-      iframe.src = '/index.html'; // 生产环境入口
-    }
-    }
-  }
-
-  // 初始化
-  init();
-
-  // 监听窗口变化
-  window.addEventListener('resize', init);
-</script>
 
 </html>
