--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,21 @@
 <html lang="">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <meta name="keywords" content="Buying Online" />
+  <meta name="description" content="Join us" />
+
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="theme-color" content="#9d9ea2">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="viewport"
+    content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no,initial-scale=1.0,viewport-fit=cover" />
+  <meta name="format-detection" content="telephone=no,email=no,address=no">
   <link rel="icon" href="<%= THEME %>favicon.ico">
   <link rel="stylesheet" href="/iconfont/iconfont.css">
-  <link rel="stylesheet" href="/iconfont1/iconfont.css">
+
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
